@@ -1,0 +1,41 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+  <title>Master GLI Server Setup</title>
+</head>
+<body>
+<table>
+  <tr>
+    <td width=130>Picture here. Gentoo Logo</td>
+    <td><img src="banner-800x64.png"></td>
+  </tr>
+  <tr>
+    <td valign-"top">
+      <!-- Left hand column starts here -->
+      <p><a href="mastergli.php?page=Welcome">Welcome</a></p>
+      <p>Profiles:<br>
+      <a href="mastergli.php?page=CreateProfile">Create</a><br>
+      <a href="mastergli.php?page=EditProfile">Edit</a><br>
+      <a href="mastergli.php?page=DeleteProfile">Delete</a></p>
+      <p>Clients:<br>
+      <a href="mastergli.php?page=AddClient">Add Client</a><br>
+      <a href="mastergli.php?page=ManageClients">Manage</a><br>
+      <a href="mastergli.php?page=DeleteClient">Delete</a></p>
+      <p>Install:<br>
+      <a href="mastergli.php?page=Configure">Configure</a><br>
+      <a href="mastergli.php?page=Execute">Execute</a><br>
+      <a href="mastergli.php?page=Status">Status</a></p>
+      <p>Master Server:<br>
+      <a href="mastergli.php?page=LoadMasterProfile">Load Profile</a><br>
+      <a href="mastergli.php?page=SaveMasterProfile">Save Profile</a></p>
+      </p>
+    </td>
+    <td>
+Main content
+    </td>
+  </tr>
+</table>
+</body>
+</html>
+
