@@ -1,9 +1,17 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.394 2005/09/28 13:40:33 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.395 2005/09/29 03:18:58 agaffney Exp $
 
 *GLI-0.2 (4 Aug 2005)
+
+  28 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
+  src/net/server/GLIClientsProfiles.py:
+  initial commit
+  src/net/server/template.html:
+  initial commit
+  src/net/server/gliserv.py:
+  add template mojo
 
   26 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/net/server/gliserv.py:
